fixed search form changed collapsed menu to button instead of hover

--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -162,12 +162,6 @@ nav {
             align-items: center;
         }
 
-        &:hover {
-            .collapse {
-                display: block;
-            }
-        }
-
         #collapseExample {
             transition: none;
         }
